--- a/frontend/app/templates/components/voter-edit-form-quick.hbs
+++ b/frontend/app/templates/components/voter-edit-form-quick.hbs
@@ -37,17 +37,17 @@
                                 <div class="col-md-2 col-md-offset-2">
                                     {{input value=dayOfBirth type="number" min=0 max=31 minlength=1 maxlength=2 oninput="validity.valid||(value='');" class="form-control voter-edit-field"
                                     placeholder="1"}}
-                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Día</p>
+                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:7x">Día</p>
                                 </div>
                                 <div class="col-md-2 col-md-offset-0">
                                     {{input value=monthOfBirth type="number" min=0 max=12 minlength=1 maxlength=2 oninput="validity.valid||(value='');" class="form-control voter-edit-field"
                                     placeholder="1"}}
-                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Mes</p>
+                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:7px">Mes</p>
                                 </div>
                                 <div class="col-md-4 col-md-offset-0">
                                     {{input value=yearOfBirth type="number" min=1900 minlength=4 maxlength=4 oninput="validity.valid||(value='');" class="form-control voter-edit-field"
                                     placeholder="1999"}}
-                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:4px">Año</p>
+                                    <p class="form-text text-muted" style="margin-top:-7px;margin-bottom:7px">Año</p>
                                 </div>
                             </div>
                             <div class="form-group row" style="margin-bottom:0">
