Add general layout to expanded row

--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -25,6 +25,13 @@
 	text-align: center
 	font-size: 25px
 
+// Voters2 Table
+.voter-expanded-row
+	padding: 10px 20px
+
+.voter-details-container
+	border: 1px solid $lightblue
+
 // Fields
 .voter-edit-field
 	font-size: 14px !important
