--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -99,7 +99,7 @@
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Código Postal <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa exactamente 5 números</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa 5 números</p>
                                     {{input value=voter.postal_code type="number" min=1 minlength=5 maxlength=5 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-4 col-md-offset-2">
@@ -119,12 +119,12 @@
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Teléfono Fijo (Nacional) <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa de 8 a 12 números</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa 8 - 12 números</p>
                                     {{input value=voter.home_phone type="number" minlength=8 maxlength=12 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Teléfono Celular <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa 10 numéros</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa 10 números</p>
                                     {{input value=voter.mobile_phone type="number" minlength=10 maxlength=10 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
@@ -159,29 +159,30 @@
                                     <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Clave alfanumérica de 18 dígitos</p>
                                     {{input value=voter.CURP class="form-control voter-edit-field"}}
                                 </div>
-                                <div class="col-md-8 col-md-offset-2">
+                                <!--<div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Estado <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa máximo 2 números</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* </p>
                                     {{input value=voter.state_code type="number" min=1 max=32 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Municipio <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa máximo 3 números</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* </p>
                                     {{input value=voter.municipality_code type="number" min=1 maxlength=3 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
+                                -->
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Sección <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa máximo 4 números</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ejemplo: <i>1234</i></p>
                                     {{input value=voter.section type="number" min=1 maxlength=3 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Localidad <i class="text-muted">(Opcional)</i></label>
-                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ingresa máximo 4 números.</p>
+                                    <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Ejemplo: <i>1234</i></p>
                                     {{input value=voter.locality_code type="number" min=1 maxlength=4 oninput="validity.valid||(value='');"class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-4 col-md-offset-2">
                                     <label>Emisión <i class="text-muted">(Opcional)</i></label>
-                                    <!-- añadir #x-select y nuevo value=voter.emision_date -->
+                                    <!-- añadir -->
                                     {{input value=voter.emision_date type="number" min=1917 max=2017 oninput="validity.valid||(value='');" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-4 col-md-offset-0">
