Adds emission year to voters
Plus some changes on the voter table and form

--- a/frontend/app/templates/ine/voters.hbs
+++ b/frontend/app/templates/ine/voters.hbs
@@ -23,6 +23,7 @@
 
 						<td>Credencial Elector</td>
 						<td>Vigencia</td>
+						<td>Año de emisión</td>
 
 						<td>Nombre</td>
 						<td>Paterno</td>
@@ -43,9 +44,9 @@
 						<td>Int</td>
 						<td>C.P.</td>
 
-						<td>Clave Estado</td>
+						{{!-- <td>Clave Estado</td>
 						<td>Clave Municipo</td>
-						<td>Clave Localidad</td>
+						<td>Clave Localidad</td> --}}
 
 						<td>Teléfono</td>
 						<td>Celular</td>
@@ -78,6 +79,7 @@
 
 						<td>{{voter.electoral_id_number}}</td>
 						<td>{{voter.expiration_date}}</td>
+						<td>{{voter.emission_year}}</td>
 
 						<td>{{voter.first_name}}</td>
 						<td>{{voter.first_last_name}}</td>
@@ -98,9 +100,9 @@
 						<td>{{voter.inside_number}}</td>
 						<td>{{voter.postal_code}}</td>
 						
-						<td>{{voter.state_code}}</td>
+						{{!-- <td>{{voter.state_code}}</td>
 						<td>{{voter.municipality_code}}</td>
-						<td>{{voter.locality_code}}</td>
+						<td>{{voter.locality_code}}</td> --}}
 
 						<td>{{voter.home_phone}}</td>
 						<td>{{voter.mobile_phone}}</td>
