--- a/frontend/app/styles/layout/_sidebar.sass
+++ b/frontend/app/styles/layout/_sidebar.sass
@@ -113,8 +113,8 @@ ul.top-menu > li > .logout
   margin-right: 5px
   margin-top: 10px
   border-radius: 50%
-  background-color: $white
-  color: $primary
+  background-color: $lightblue
+  color: $white
   font-size: 16px
   text-align: center
   line-height: 41px
