Add layout and css to voter quick form

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -19,6 +19,7 @@ $primary: #4cc9a6
 $lightblue: #6fa6cc
 $blue: #399ed9
 $mediumblue: #4d5b6a
+$bluegray: #687b8f
 $darkblue: #2f3e4e
 $darkerblue: #192029
 
