--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -29,6 +29,48 @@
 .voter-expanded-row
 	padding: 10px 20px
 
+// Voters2 quick form
+.voter-row-form
+	font-size: 16px
+	color: white
+	background: $lightblue
+	padding: 5px
+	text-align: left
+	border-radius: 7px
+	.row-form-field
+		padding: 5px
+		display: inline-block
+		input
+			color: $darkerblue
+			width: 100%
+			border: none
+			border-radius: 3px
+			padding: 5px 8px
+			&:focus
+				outline: none
+				border: 2px solid $darkerblue
+
+		span
+			display: block
+	.med
+		width: 125px
+
+	.buttons-row
+		width: 100%
+		text-align: right
+		margin-top: 5px
+		.btn-blue
+			color: $white
+			display: inline-block
+			border-radius: 4px
+			padding: 5px 8px
+			background: $darkblue
+			border: 2px solid $darkblue
+		.btn-blue.invert
+			background: $lightblue
+			color: $darkblue
+	
+
 .voter-details-container
 	border: 1px solid $lightblue
 
