--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -17,11 +17,6 @@
 					</div>
 				</div>
 				<div style="height: 30px;line-height: 30px;">
-					{{#link-to "ine.upload-file" class="voters-table-links"}}
-						<span>Subir Archivo</span>
-						<i class="fa fa-file"></i>
-	            	{{/link-to}}
-
 	            	{{#link-to "ine.new-voter" class="voters-table-links"}}
 	              		<span>Agregar Completo</span>
 	              		<i class="fa fa-plus"></i>
@@ -41,15 +36,14 @@
 				{{!-- filters --}}
 				{{#liquid-if showFilters class="expandedVoter"}}
 					<div style="height: 30px; font-size: 15px;">
-						En esta fila iran iran los filtros
+						En esta fila iran los filtros
 					</div>
 				{{/liquid-if}}
 
 				{{#liquid-if showQuickForm class="expandedVoter"}}
-					<div style="height: 30px; font-size: 15px;">
-						En esta fila iran forma de agregar usuario simple
-					</div>
-				{{/liquid-if}}			
+					
+				{{/liquid-if}}
+				{{voter-row-form}}
 			</div>
 			<table class="table table-striped table-hover table-condensed">
 				<thead class="voter-table-header">
