Changes in serialization changed CURP to curp in DB and in ember use Active model serializer strong params initial saving record from voters2 quickform

--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -152,7 +152,7 @@
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>CURP <i class="text-muted">(Opcional)</i></label>
                                     <p class="form-text text-muted" style="margin-top:-3px; margin-bottom: 5px">* Clave alfanumérica de 18 dígitos</p>
-                                    {{input value=voter.CURP class="form-control voter-edit-field"}}
+                                    {{input value=voter.curp class="form-control voter-edit-field"}}
                                 </div>
                                 <!--<div class="col-md-8 col-md-offset-2">
                                     <label>Clave de Estado <i class="text-muted">(Opcional)</i></label>
