--- a/frontend/app/templates/components/voter-expanded-row.hbs
+++ b/frontend/app/templates/components/voter-expanded-row.hbs
@@ -6,7 +6,7 @@
 		<p>{{readable-date voter.date_of_birth}}</p>
 		<p>{{voter.state}}, {{voter.municipality}}</p>
 		<p>Id Electoral: {{voter.electoral_id_number}}</p>
-		<p>CURP: {{voter.CURP}}</p>
+		<p>CURP: {{voter.curp}}</p>
 	</div>
 
 
