--- a/frontend/app/templates/components/voter-edit-form.hbs
+++ b/frontend/app/templates/components/voter-edit-form.hbs
@@ -14,15 +14,15 @@
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Nombre</label>
-                                    {{input value=voter.first_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.first_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Apellido Paterno</label>
-                                    {{input value=voter.first_last_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.first_last_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Apellido Materno</label>
-                                    {{input value=voter.second_last_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.second_last_name required=true pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                             </div>
                             <div class="form-group row" style="margin-bottom:0">
@@ -71,11 +71,11 @@
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Municipio <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.municipality pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.municipality pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2" style="margin-bottom:0">
                                     <label>Localidad <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.locality pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.locality pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                             </div>
                         </div>
@@ -86,11 +86,11 @@
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Colonia <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.suburb pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.suburb pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Calle <i class="text-muted">(Opcional)</i></label>
-                                    {{input value=voter.street pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" class="form-control voter-edit-field"}}
+                                    {{input value=voter.street pattern="[A-Za-zÀ-ÖÙ-Ýà-öù-ý\- \']+" title="Por favor no uses números ni símbolos exceptuando guiones y comillas simples" class="form-control voter-edit-field"}}
                                 </div>
                                 <div class="col-md-8 col-md-offset-2">
                                     <label>Código Postal <i class="text-muted">(Opcional)</i></label>
