Add state select in quick form

--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -40,6 +40,7 @@
 	.row-form-field
 		padding: 5px
 		display: inline-block
+		vertical-align: bottom
 		input
 			color: $darkerblue
 			width: 100%
@@ -52,8 +53,15 @@
 
 		span
 			display: block
+		.row-form-select
+			background: white
+			padding: 2px 8px
+			color: $darkerblue
+			border-radius: 3px
 	.med
 		width: 125px
+	.big
+		width: 200px
 
 	.buttons-row
 		width: 100%
