Improve dropdown style in quick form state select

--- a/frontend/app/templates/components/voter-row-form.hbs
+++ b/frontend/app/templates/components/voter-row-form.hbs
@@ -21,6 +21,7 @@
 				class="row-form-select"
 				tagName=div
 				options=states
+				renderInPlace=true
 				selected=selectedState
 				placeholder="Selecciona"
 				onchange=(action "selectState")
