--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -1,70 +1,7 @@
-<div class="container">
-	<div class="row vertical-offset-100">
-		<div class="col-md-10 col-md-offset-1">
-			<div class="table-header">
-				<div style="height: 40px;">
-					<h3 style="margin: 0px; float: left;">Registro de Estructura</h3>
-					<div class="form-select" style="width: 250px; margin-bottom: 0px; float: right; padding: 5px;">
-						{{#power-select
-						search=(action "searchVoters")
-						selected=selected
-						placeholder="Busca por Nombre o Apellido"
-						onchange=(action "seeVoter")
-						as |voter|
-						}}
-							{{voter.first_name}} {{voter.first_last_name}}
-						{{/power-select}}
-					</div>
-				</div>
-				<div style="height: 30px;line-height: 30px;">
-	            	{{#link-to "ine.new-voter" class="voters-table-links"}}
-	              		<span>Agregar Completo</span>
-	              		<i class="fa fa-plus"></i>
-	            	{{/link-to}}
+{{#table-for model=model title="Registro de votantes" as |table|}}
+	{{#table.nav as |nav|}}
+		{{nav.voter-quickform}}
+	{{/table.nav}}
 
-	            	<a class="voters-table-links" {{action 'showQuickForm'}}>
-	            		<span>Agregar Simple</span>
-	              		<i class="fa fa-plus-square-o"></i>
-	            	</a>
-
-	            	<a class="voters-table-links" {{action 'showFilters'}}>
-	            		<span>Filtros</span>
-	              		<i class="fa fa-filter"></i>
-	            	</a>
-				</div>
-
-				{{!-- filters --}}
-				{{#liquid-if showFilters class="expandedVoter"}}
-					<div style="height: 30px; font-size: 15px;">
-						En esta fila iran los filtros
-					</div>
-				{{/liquid-if}}
-
-				{{#liquid-if showQuickForm class="expandedVoter"}}
-					
-				{{/liquid-if}}
-				{{voter-row-form refreshVoters='refreshVoters'}}
-			</div>
-			<table class="table table-striped table-hover table-condensed">
-				<thead class="voter-table-header">
-					<tr>
-						<td>Credencial Elector</td>
-						<td>Nombre</td>
-						<td>Paterno</td>
-						<td>Materno</td>
-						<td>Fecha de Nacimiento</td>
-						<td>Estado</td>
-						<td></td>
-					</tr>
-				</thead>
-
-				<tbody class="voter-table-content">
-					{{#each model as |voter|}}
-						{{voter-row voter=voter}}
-					{{/each}}
-					{{!-- {{infinity-loader infinityModel=model}} --}}
-				</tbody>
-			</table>
-		</div>
-	</div>
-</div>
+	{{table.content}}
+{{/table-for}}
