--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -1,5 +1,7 @@
 {{#table-for model=model title="Registro de votantes" as |table|}}
 	{{#table.nav as |nav|}}
+		{{nav.controls}}
+		{{nav.filters}}
 		{{nav.voter-quickform}}
 	{{/table.nav}}
 
