Add table-nav-button it supports url or actions also passed showFlag to filters and quickForm contextual components

--- a/frontend/app/templates/components/table-for-nav.hbs
+++ b/frontend/app/templates/components/table-for-nav.hbs
@@ -18,8 +18,8 @@
 	{{yield 
 		(hash
 			voter-quickform=(component 'voter-row-form' refreshVoters='refreshVoters')
-			filters=(component 'table-nav-filters' showFilters=showFilters)
-			controls=(component 'table-nav-controls' showQuickform=showQuickform))}}
+			filters=(component 'table-nav-filters')
+			controls=(component 'table-nav-controls'))}}
 
 </div>
 
