--- a/frontend/app/templates/components/table-nav-filters.hbs
+++ b/frontend/app/templates/components/table-nav-filters.hbs
@@ -1,9 +1,6 @@
 {{yield}}
-<div style="height: 30px; font-size: 15px;">
-	En esta fila iran los filtros
-</div>
-{{!-- {{#liquid-if showFilters class="expandedVoter"}}
+{{#liquid-if showFlag class="expandedVoter"}}
 	<div style="height: 30px; font-size: 15px;">
 		En esta fila iran los filtros
 	</div>
-{{/liquid-if}} --}}
+{{/liquid-if}}
