--- a/frontend/app/templates/components/table-for-nav.hbs
+++ b/frontend/app/templates/components/table-for-nav.hbs
@@ -17,7 +17,7 @@
 
 	{{yield 
 		(hash
-			voter-quickform=(component 'voter-row-form' refreshVoters='refreshVoters')
+			voter-quickform=(component 'voter-row-form')
 			filters=(component 'table-nav-filters')
 			controls=(component 'table-nav-controls'))}}
 
