Improve voters2 table style

--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -2,9 +2,9 @@
 	{{#table.nav as |nav|}}
 
 		{{#nav.controls as |control|}}
-			{{control.url-btn text="Agregar Completo" url="ine.new-voter" faIcon="fa-plus"}}
-			{{control.action-btn text="Agregar Simple" showFlag=showQuickform faIcon="fa-plus-square-o"}}
-			{{control.action-btn text="Filtros" showFlag=showFilters faIcon="fa-filter"}}
+			{{control.url-btn text="Agregar Completo" url="ine.new-voter"}}
+			{{control.action-btn text="Agregar Simple" showFlag=showQuickform}}
+			{{control.action-btn text="Filtros" showFlag=showFilters}}
 		{{/nav.controls}}
 
 		{{nav.filters showFlag=showFilters}}
