--- a/frontend/app/templates/components/table-for-nav.hbs
+++ b/frontend/app/templates/components/table-for-nav.hbs
@@ -1,8 +1,8 @@
 {{yield}}
 <div class="table-header">
-	<div style="height: 40px;">
+	{{!-- <div style="height: 40px;">
 		<div class="form-select" style="width: 250px; margin-bottom: 0px; float: right; padding: 5px;">
-			{{!-- {{#power-select
+			{{#power-select
 			search=(action "searchVoters")
 			selected=selected
 			placeholder="Busca por Nombre o Apellido"
@@ -10,9 +10,9 @@
 			as |voter|
 		}}
 		{{voter.first_name}} {{voter.first_last_name}}
-		{{/power-select}} --}}
+		{{/power-select}}
 		</div>
-	</div>
+	</div> --}}
 	
 	{{!-- The params in the contextual components are mandatory when used and will precede the values assigned here. I pass the params here for documentation porpuses. TODO: document in an MD file the internal table-for component --}}
 	{{yield 
