--- a/frontend/app/templates/components/table-for.hbs
+++ b/frontend/app/templates/components/table-for.hbs
@@ -1,11 +1,11 @@
 <div class="container">
 	<div class="row vertical-offset-100">
-		<div class="col-md-10 col-md-offset-1">
-		<h1>{{title}}</h1>
-		{{yield
-			(hash 
-				nav=(component 'table-for-nav' model=model)
-				content=(component 'table-for-content' model=model))}}
+		<div class="col-md-10 col-md-offset-1 table-for">
+			<h3>{{title}}</h3>
+			{{yield
+				(hash 
+					nav=(component 'table-for-nav' model=model)
+					content=(component 'table-for-content' model=model))}}
 		</div>
 	</div>
 </div>
