Improve style of table searchbar

--- a/frontend/app/styles/general/_tables.sass
+++ b/frontend/app/styles/general/_tables.sass
@@ -2,6 +2,27 @@
   text-align: right
   padding: 10px 0
 
+.table-searchbar
+  font-size: 15px
+  background: white
+  padding: 2px 0px
+  color: $darkerblue
+  border-radius: 6px
+  input
+    border-radius: 5px
+    border: 2px solid $darkerblue
+    &:focus
+      outline: none
+      border: 2px solid $darkerblue
+  .ember-power-select-placeholder
+    text-align: left
+  .ember-basic-dropdown
+    padding: 5px
+    border: 2px solid gray
+    border-radius: 6px
+  .ember-basic-dropdown-content
+    margin-top: 6px
+
 .voters-table-links
   float: left
   margin-right: 20px;
