--- a/frontend/app/styles/general/_tables.sass
+++ b/frontend/app/styles/general/_tables.sass
@@ -6,14 +6,14 @@
   font-size: 15px
   background: white
   padding: 2px 0px
-  color: $darkerblue
+  color: gray
   border-radius: 6px
   input
     border-radius: 5px
-    border: 2px solid $darkerblue
+    border: 2px solid gray
     &:focus
       outline: none
-      border: 2px solid $darkerblue
+      border: 2px solid gray
   .ember-power-select-placeholder
     text-align: left
   .ember-basic-dropdown
@@ -21,7 +21,8 @@
     border: 2px solid gray
     border-radius: 6px
   .ember-basic-dropdown-content
-    margin-top: 6px
+    margin-top: 7px
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
 
 .voters-table-links
   float: left
