Change voter search results to be shown in table

--- a/frontend/app/styles/general/_variables.sass
+++ b/frontend/app/styles/general/_variables.sass
@@ -16,10 +16,11 @@ $black: #2c2d30
 $primary: #4cc9a6
 
 // Blue
-$lightblue: #6fa6cc
+$superlightblue: #C6DFE9
+$lightblue: #9FCADB
 $blue: #399ed9
 $mediumblue: #4d5b6a
-$bluegray: #687b8f
+$bluegray: #4E5D6D
 $darkblue: #2f3e4e
 $darkerblue: #192029
 
