--- a/frontend/app/styles/general/_table-for.sass
+++ b/frontend/app/styles/general/_table-for.sass
@@ -1,3 +1,27 @@
+.table-header
+  text-align: right
+  padding-top: 10px
+
+.table-searchbar
+  height: 40px
+  position: relative
+  font-size: 15px
+  color: $darkgray
+  margin-top: 1px
+  input
+    width: 100%
+    height: 100%
+    border: 2px solid $gray
+    border-radius: 6px
+    padding-left: 10px
+    &:focus
+    	outline: none
+  i
+  	font-size: 19px
+  	top: 9px
+  	right: 10px
+  	position: absolute
+
 .table-for
 	border: 2px solid $gray
 	border-radius: 10px
@@ -6,6 +30,7 @@
 		font-size: 22px
 		margin: 0px
 	.content
+		margin-top: 1px
 		padding: 5px
 		border: 2px solid $gray
 		border-radius: 10px
