Improve style of table-for

--- a/frontend/app/templates/components/voter-row.hbs
+++ b/frontend/app/templates/components/voter-row.hbs
@@ -9,7 +9,7 @@
 	<td>{{voter.state}}</td>
 
 	<td>
-		{{link-to "Editar" "ine.voter-edit" voter class="btn btn-info"}}
+		{{link-to "Editar" "ine.voter-edit" voter class="btn btn-edit"}}
 	</td>
 </tr>
 
