--- a/frontend/app/styles/general/_voters.sass
+++ b/frontend/app/styles/general/_voters.sass
@@ -27,7 +27,7 @@
 
 // Voters2 Table
 .voter-expanded-row
-	padding: 10px 20px
+	padding: 0px 20px
 
 // Voters2 quick form
 .voter-row-form
@@ -80,7 +80,11 @@
 	
 
 .voter-details-container
-	border: 1px solid $lightblue
+	padding: 10px
+	div
+		border-radius: 5px
+		padding: 5px
+		background: $gray
 
 // Fields
 .voter-edit-field
