--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -12,5 +12,5 @@
 		{{nav.searchbar setSearchQuery=(action 'setSearchQuery')}}
 	{{/table.nav}}
 
-	{{table.content}}
+	{{table.content deleteAction=(action 'deleteVoter')}}
 {{/table-for}}
