--- a/frontend/app/styles/general/_table-for.sass
+++ b/frontend/app/styles/general/_table-for.sass
@@ -34,6 +34,8 @@
 		padding: 5px
 		border: 2px solid $gray
 		border-radius: 10px
+  .btn
+    padding: 3px 5px
   .btn-edit
     color: white
     background-color: $lightblue
