Add infinity scroll with button to table

--- a/frontend/app/styles/general/_table-for.sass
+++ b/frontend/app/styles/general/_table-for.sass
@@ -39,3 +39,8 @@
   .btn-edit
     color: white
     background-color: $lightblue
+
+.load-more-button
+  color: white
+  background-color: $lightblue
+  border: none
