--- a/frontend/app/templates/ine/voters2.hbs
+++ b/frontend/app/templates/ine/voters2.hbs
@@ -13,4 +13,5 @@
 	{{/table.nav}}
 
 	{{table.content deleteAction=(action 'deleteVoter')}}
+	{{load-more-button action='infinityLoad' infinityModel=model}}
 {{/table-for}}
