Basic functionality done
Adds a controller for charts that load async
Also adds scafolding for ine/dashboard route on both backend and frontend

--- a/frontend/app/templates/ine/voters.hbs
+++ b/frontend/app/templates/ine/voters.hbs
@@ -3,6 +3,7 @@
 
 		{{#nav.controls as |control|}}
 			{{control.url-btn text="Agregar Completo" url="ine.new-voter"}}
+			{{control.url-btn text="Ver resumen de datos" url="ine.dashboard"}}
 			{{!-- {{control.action-btn text="Agregar Simple" showFlag=showQuickform}} --}}
 			{{!-- {{control.action-btn text="Filtros" showFlag=showFilters}} --}}
 		{{/nav.controls}}
