Improve projections map readability

--- a/frontend/app/templates/maps/projections.hbs
+++ b/frontend/app/templates/maps/projections.hbs
@@ -2,6 +2,6 @@
 
 {{projections-sidebar year=year election=election sectionData=model mapDivision=mapDivision dataType=dataType setMapDivision='setMapDivision' isVotes=isVotes isPopulation=isPopulation isFederal=isFederal isMunicipal=isMunicipal setDataType='setDataType' setElection='setElection'}}
 
-{{projections-map sectionsData=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
+{{projections-map model=model level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation setState='setState' setMunicipality='setMunicipality' setFederalDistrict='setFederalDistrict' setSection='setSection'}}
 
 {{projections-charts store=store level=level state=state municipality=municipality section=section federalDistrict=federalDistrict mapDivision=mapDivision dataType=dataType visualization=visualization isPopulation=isPopulation}}
